# GlassMonitor

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  configure.ac  glassmonitor.spec.in
conf/: Makefile.am  glassmonitor-sample.conf
icons/: Makefile.am  glassmonitor-16x16.xpm
src/: Makefile.am
src/glassmonitor/: Makefile.am  cmdswitch.cpp  cmdswitch.h  config.cpp  config.h  glassmonitor.cpp  glassmonitor.h  jack.cpp  mail.cpp  mail.h  monitor.cpp  monitor.h  playmeter.cpp  playmeter.h  profile.cpp  profile.h  segmeter.cpp  statsdialog.cpp
xdg/: Makefile.am  glassmonitor.desktop
